@@ -4,7 +4,7 @@
 
     <groupId>com.foundationdb</groupId>
     <artifactId>fdb-sql-layer</artifactId>
-    <version>2.1.0-SNAPSHOT</version>
+    <version>2.2.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>FoundationDB SQL Layer</name>
@@ -107,7 +107,10 @@
                         <fdbsql.port>${fdbsql.port}</fdbsql.port>
                         <fdbsql.postgres.port>${fdbsql.postgres.port}</fdbsql.postgres.port>
                     </systemPropertyVariables>
-                    <argLine>-Xmx512m ${fdbsql.test.extraJvmArgs} ${fdbsql.test.JmxJvmArgs} ${surefireJacocoArg} </argLine>
+                    <argLine>-Xmx512m ${fdbsql.test.extraJvmArgs} ${fdbsql.test.JmxJvmArgs} ${surefireJacocoArg}
+                        -Dmvn.main.basedir=${main.basedir} -Dmvn.settings.localRepository=${settings.localRepository}
+                        -Djava.security.manager -Djava.security.policy=${main.basedir}/fdb-sql-layer-common/test/resources/tests.policy
+                    </argLine>
                     <includes>
                         <include>**/*Test.java</include>
                         <include>**/*Test?.java</include>
@@ -126,7 +129,12 @@
                         <fdbsql.port>${fdbsql.port}</fdbsql.port>
                         <fdbsql.postgres.port>${fdbsql.postgres.port}</fdbsql.postgres.port>
                     </systemPropertyVariables>
-                    <argLine>-Xmx512m ${fdbsql.test.extraJvmArgs} ${fdbsql.test.JmxJvmArgs} ${failsafeJacocoArg}</argLine>
+                    <argLine>-Xmx512m ${fdbsql.test.extraJvmArgs} ${fdbsql.test.JmxJvmArgs} ${failsafeJacocoArg}
+                              <!-- These two properties have to be set here rather than in the systemPropertyVariables section
+                                   because they bubble into the policy file before failsafe starts setting properties -->
+                             -Dmvn.main.basedir=${main.basedir} -Dmvn.settings.localRepository=${settings.localRepository}
+                             -Djava.security.manager -Djava.security.policy=${main.basedir}/fdb-sql-layer-common/test/resources/tests.policy
+                    </argLine>
                 </configuration>
                 <executions>
                     <execution>
